<resources>

    <string name="app_name">微博</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">WeiChat</string>
    <!-- maintab -->
    <string name="mtab_home">首页</string>
    <string name="mtab_info">消息</string>
    <string name="mtab_message">私信</string>
    <string name="mtab_me">我</string>
    <string name="mtab_setting">设置</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中……</string>
    <string name="pull_to_refresh_fail">加载失败</string>
    <string name="pull_to_refresh_null">没有评论</string>
    <!-- menu -->
    <string name="menu_Change">夜间模式</string>
    <string name="menu_Update">查看更新</string>
    <string name="menu_Exit">离开</string>
     <!-- topic -->
    <string name="topic_message">评论</string>
    <string name="topic_send">转发</string>
    <string name="topic_good">赞</string>
    <!-- sendWeibo -->
    <string name="pub">发微博</string>
    <string name="sending">发送</string>
    <string name="weibo_content_hint">&#160;&#160;&#160;&#160;分享新鲜事....</string>
    <!-- userinfo -->
    <string name="userinfo">用户信息</string>
    <string name="mycomment">评论我的</string>
    <string name="logout">注销</string>
    <string name="weibo">微博</string>
    <string name="favorite">收藏</string>
    <string name="focus">关注</string>
    <string name="fans">粉丝</string>
    <string name="add">加关注</string>

</resources>