<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include android:id="@+id/ll_above" 
        layout="@layout/common_head_view" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/topic_progress"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:indeterminate="false"
            android:indeterminateDrawable="@anim/loading"
            android:visibility="gone" />

        <ListView
            android:id="@+id/res_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll"
            android:layout_below="@+id/ll_above"
            android:cacheColorHint="@android:color/transparent"
            android:dividerHeight="1.0dip"
            android:fadeScrollbars="true"
            android:fadingEdge="none"
            android:listSelector="@android:color/transparent"
            android:paddingLeft="4.0dip"
            android:paddingRight="4.0dip"
            android:scrollbarStyle="outsideOverlay" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/tabbar_bg" >

            <Button
                android:id="@+id/topic_retweet"
                style="@style/Topic_tab_bottom"
                android:layout_marginLeft="@dimen/margin_40"
                android:checked="true"
                android:drawableLeft="@drawable/toolbar_icon_retweet"
                android:onClick="retweet"
                android:text="@string/topic_send" />

            <Button
                android:id="@+id/topic_comment"
                style="@style/Topic_tab_bottom"
                android:layout_marginLeft="@dimen/margin_15"
                android:drawableLeft="@drawable/toolbar_icon_comment"
                android:onClick="comment"
                android:text="@string/topic_message" />

            <Button
                android:id="@+id/topic_like"
                style="@style/Topic_tab_bottom"
                android:layout_marginLeft="@dimen/margin_15"
                android:drawableLeft="@drawable/toolbar_icon_like"
                android:onClick="like"
                android:text="@string/topic_good" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>